bonus/jules/confs/gitlab/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-svc
  namespace: gitlab
spec:
  selector:
    app: gitlab
  ports:
    - protocol: TCP
      port: 8181
      targetPort: 80
      name: http
  type: LoadBalancer
